[gd_scene load_steps=24 format=3 uid="uid://s2ybu4j312qf"]

[ext_resource type="Theme" uid="uid://kdfneisskda" path="res://misc/UI_theme.tres" id="1_ex5hu"]
[ext_resource type="Script" path="res://UI/scripts/main_menu.gd" id="1_xoj62"]
[ext_resource type="Shader" path="res://misc/shaders/menu_background.gdshader" id="2_2rxur"]
[ext_resource type="PackedScene" uid="uid://bnjskjdcqos36" path="res://UI/buttons/button.tscn" id="4_keehu"]
[ext_resource type="PackedScene" uid="uid://cf7ahjfie3qqr" path="res://UI/options.tscn" id="5_doggi"]
[ext_resource type="FontFile" uid="uid://dfecjk6s07bx0" path="res://misc/fonts/medieval_fontA.tres" id="6_4c5bq"]
[ext_resource type="AudioStream" uid="uid://c1qads58fblss" path="res://sound/music/wild_encounter.mp3" id="6_l42fs"]
[ext_resource type="Texture2D" uid="uid://di2ocl0dlwrk3" path="res://UI/KeySample.png" id="7_uj7eh"]
[ext_resource type="Texture2D" uid="uid://c1dhyac0o1d0e" path="res://UI/Keys/Blank-Md-Key.png" id="8_yhtqg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_err6c"]
shader = ExtResource("2_2rxur")
shader_parameter/zoom = 2.0
shader_parameter/rotate_speed = 0.5
shader_parameter/disp = Vector2(0.5, 0.5)
shader_parameter/transparent = false

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_stio0"]
load_path = "res://.godot/imported/KeySample.png-8d9b0ae24bedaf0a22591bc25a79e232.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_6m8w5"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_stio0")
region = Rect2(96, 132, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_d62wu"]
atlas = ExtResource("7_uj7eh")
region = Rect2(192, 100, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_07dh5"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_stio0")
region = Rect2(64, 36, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_csngt"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_stio0")
region = Rect2(160, 36, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hto1p"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_stio0")
region = Rect2(192, 36, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ampub"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_stio0")
region = Rect2(64, 132, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6wwy"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_stio0")
region = Rect2(128, 164, 48, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8jca"]
atlas = ExtResource("8_yhtqg")
region = Rect2(0, 4, 48, 28)

[sub_resource type="SystemFont" id="SystemFont_y0gg0"]

[sub_resource type="Animation" id="Animation_ie4x7"]
length = 0.001

[sub_resource type="Animation" id="Animation_1btsl"]
resource_name = "title_animation"
length = 1.6
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32obw"]
_data = {
"RESET": SubResource("Animation_ie4x7"),
"title_animation": SubResource("Animation_1btsl")
}

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xoj62")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_err6c")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -100.0
offset_right = -126.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="menu"]
layout_mode = 2
theme = ExtResource("1_ex5hu")

[node name="VBoxContainer" type="VBoxContainer" parent="menu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="start" parent="menu/Panel/VBoxContainer" instance=ExtResource("4_keehu")]
layout_mode = 2
text = "Start Game"

[node name="options" parent="menu/Panel/VBoxContainer" instance=ExtResource("4_keehu")]
layout_mode = 2
text = "Options"

[node name="credits" parent="menu/Panel/VBoxContainer" instance=ExtResource("4_keehu")]
layout_mode = 2
text = "Credits
"

[node name="quit" parent="menu/Panel/VBoxContainer" instance=ExtResource("4_keehu")]
layout_mode = 2
text = "Quit Game"

[node name="options" parent="." instance=ExtResource("5_doggi")]
visible = false
layout_mode = 1

[node name="Credits" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -250.0
offset_right = 375.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ex5hu")

[node name="HBoxContainer" type="HBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 22.0
offset_right = -23.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 90

[node name="Roles" type="VBoxContainer" parent="Credits/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Credits/HBoxContainer/Roles"]
layout_mode = 2
theme = ExtResource("1_ex5hu")
theme_override_font_sizes/font_size = 50
text = "Programmer:"

[node name="Label2" type="Label" parent="Credits/HBoxContainer/Roles"]
layout_mode = 2
theme = ExtResource("1_ex5hu")
theme_override_font_sizes/font_size = 50
text = "Art and sound:"

[node name="people" type="VBoxContainer" parent="Credits/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Credits/HBoxContainer/people"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Hexadotz"

[node name="Label2" type="Label" parent="Credits/HBoxContainer/people"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Marandal"

[node name="quit_credits" parent="Credits" instance=ExtResource("4_keehu")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -153.0
offset_top = -62.0
offset_right = -22.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"

[node name="start_game" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.533333)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ex5hu")

[node name="Panel" type="Panel" parent="start_game"]
layout_mode = 0
offset_left = 200.0
offset_top = 24.0
offset_right = 960.0
offset_bottom = 432.0

[node name="intro" type="RichTextLabel" parent="start_game/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.5
offset_top = -185.0
offset_right = 351.5
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("6_4c5bq")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "			Defbrief
A group of pesky goblins has envaded a tavren, causing havok across it it is unkown why they've decided to attack the humans as they normally keep in thier territory but it matters little as you, the mage of the town been contacted by the people who live in that town to help them with this problem, your mission is simple:
Get in			 [color=red]kill them all[/color] 			 leave
Good Luck"
fit_content = true
scroll_active = false

[node name="control_text" type="Label" parent="start_game"]
layout_mode = 0
offset_left = 72.0
offset_top = 432.0
offset_right = 236.0
offset_bottom = 481.0
theme = ExtResource("1_ex5hu")
theme_override_font_sizes/font_size = 40
text = "Controls:"

[node name="Container_movement" type="Control" parent="start_game"]
anchors_preset = 0
offset_left = 72.0
offset_top = 496.0
offset_right = 240.0
offset_bottom = 616.0

[node name="TextureRect" type="TextureRect" parent="start_game/Container_movement"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.002
offset_left = 48.0
offset_top = 8.0
offset_right = 85.696
offset_bottom = 48.0
texture = SubResource("AtlasTexture_6m8w5")

[node name="TextureRect2" type="TextureRect" parent="start_game/Container_movement"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.002
offset_left = 48.0
offset_top = 48.0
offset_right = 85.696
offset_bottom = 88.0
texture = SubResource("AtlasTexture_d62wu")

[node name="TextureRect3" type="TextureRect" parent="start_game/Container_movement"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.002
offset_left = 8.0
offset_top = 48.0
offset_right = 45.696
offset_bottom = 88.0
texture = SubResource("AtlasTexture_07dh5")

[node name="TextureRect4" type="TextureRect" parent="start_game/Container_movement"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.002
offset_left = 88.0
offset_top = 48.0
offset_right = 125.696
offset_bottom = 88.0
texture = SubResource("AtlasTexture_csngt")

[node name="Label" type="Label" parent="start_game/Container_movement"]
layout_mode = 0
offset_top = 88.0
offset_right = 148.0
offset_bottom = 119.0
theme = ExtResource("1_ex5hu")
theme_override_font_sizes/font_size = 25
text = "Move Around"

[node name="Control_A" type="Control" parent="start_game"]
anchors_preset = 0
offset_left = 248.0
offset_top = 504.0
offset_right = 472.0
offset_bottom = 608.0

[node name="VBoxContainer" type="VBoxContainer" parent="start_game/Control_A"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="start_game/Control_A/VBoxContainer"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="start_game/Control_A/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_hto1p")

[node name="Label" type="Label" parent="start_game/Control_A/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ex5hu")
text = "Throw / pickup weapon"

[node name="HBoxContainer2" type="HBoxContainer" parent="start_game/Control_A/VBoxContainer"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="start_game/Control_A/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_ampub")

[node name="Label" type="Label" parent="start_game/Control_A/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_ex5hu")
text = "Switch weapon"

[node name="HBoxContainer3" type="HBoxContainer" parent="start_game/Control_A/VBoxContainer"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="start_game/Control_A/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = SubResource("AtlasTexture_f6wwy")

[node name="Label" type="Label" parent="start_game/Control_A/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("1_ex5hu")
text = "Walk (hold)"

[node name="combat_B" type="Control" parent="start_game"]
anchors_preset = 0
offset_left = 480.0
offset_top = 520.0
offset_right = 760.0
offset_bottom = 584.0

[node name="VBoxContainer" type="VBoxContainer" parent="start_game/combat_B"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="start_game/combat_B/VBoxContainer"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="start_game/combat_B/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_o8jca")

[node name="Label" type="Label" parent="start_game/combat_B/VBoxContainer/HBoxContainer/TextureRect4"]
layout_mode = 0
offset_left = 8.0
offset_right = 69.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = SubResource("SystemFont_y0gg0")
text = "Mouse1"

[node name="Label" type="Label" parent="start_game/combat_B/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ex5hu")
text = "Shoot Staff / swing weapon"

[node name="HBoxContainer2" type="HBoxContainer" parent="start_game/combat_B/VBoxContainer"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="start_game/combat_B/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_o8jca")

[node name="Label" type="Label" parent="start_game/combat_B/VBoxContainer/HBoxContainer2/TextureRect4"]
layout_mode = 0
offset_left = 8.0
offset_right = 69.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = SubResource("SystemFont_y0gg0")
text = "Mouse2"

[node name="Label" type="Label" parent="start_game/combat_B/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_ex5hu")
text = "Look far"

[node name="VBoxContainer" type="VBoxContainer" parent="start_game"]
layout_mode = 0
offset_left = 936.0
offset_top = 512.0
offset_right = 1092.0
offset_bottom = 586.0

[node name="Start level" parent="start_game/VBoxContainer" instance=ExtResource("4_keehu")]
layout_mode = 2
text = "Start Level"

[node name="back to MM" parent="start_game/VBoxContainer" instance=ExtResource("4_keehu")]
layout_mode = 2
text = "Back to Main Menu"

[node name="VSeparator" type="VSeparator" parent="start_game"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_left = 232.0
offset_top = 504.0
offset_right = 236.0
offset_bottom = 604.0

[node name="VSeparator2" type="VSeparator" parent="start_game"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_left = 464.0
offset_top = 504.0
offset_right = 468.0
offset_bottom = 604.0

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_32obw")
}
autoplay = "title_animation"
speed_scale = 0.2

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_l42fs")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="menu/Panel/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="menu/Panel/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="menu/Panel/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="menu/Panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits/quit_credits" to="." method="_on_quit_credits_pressed"]
[connection signal="pressed" from="start_game/VBoxContainer/Start level" to="." method="_on_start_level_pressed"]
[connection signal="pressed" from="start_game/VBoxContainer/back to MM" to="." method="_on_back_to_mm_pressed"]
